--- a/scss/style2.scss
+++ b/scss/style2.scss
@@ -5,7 +5,6 @@
 ////////////////////////////////////////////////////////
 body {
   background-image: url(../images/background/back1.jpg);
-  // width: 1000px;
   font-family: $defaultfont;
   nav {
     @include nav;
@@ -59,6 +58,7 @@ body {
           }
         }
       }
+      // other images
       .box1 {
         grid-area: test1;
         @include rotationa;
@@ -103,8 +103,8 @@ body {
       'slide1 slide1 slide2 slide2'
       'nonefish nonefish slide2 slide2';
       padding-left: 0em;
-      // padding-right: 20em;
 
+      // slideshow
       .slideshow {
         border: 0px solid black;
         width: 500px;
@@ -119,7 +119,6 @@ body {
             width: 500px;
             height: 300px;
             float: left;
-            // @include overlaycenter;
             @include overlay;
             .overlay {
               .text {
@@ -146,12 +145,12 @@ body {
           }
         }
       }
+      // other images
       .part1 {
         border: 0px solid black;
         height: 150px;
         width: 250px;
         grid-area: fish;
-        // @include overlaycenter;
         @include overlay;
       }
       .part2 {
@@ -159,7 +158,6 @@ body {
         height: 150px;
         width: 250px;
         grid-area: fish2;
-        // @include overlaycenter;
         @include overlay;
       }
       .part3 {
@@ -168,7 +166,6 @@ body {
         width: 500px;
         height: 150px;
         grid-area: nonefish;
-        // @include overlaycenter;
         @include overlay;
       }
     }
@@ -180,9 +177,10 @@ body {
       'hiking hiking hiking2 hiking2'
       'hike2 hike hike hike3';
       padding-left: 0em;
-      // padding-right: 20em;
       padding-top: 2em;
       padding-top: 5em;
+
+      //slideshow
       .slideshow {
         border: 0px solid black;
         width: 500px;
@@ -197,7 +195,6 @@ body {
             width: 500px;
             height: 300px;
             float: left;
-            // @include overlaycenter;
             @include overlay;
             .overlay {
               .text {
@@ -224,13 +221,12 @@ body {
           }
         }
       }
-
+      //other images
       .hike {
         border: 0px solid black;
         width: 500px;
         height: 200px;
         grid-area: hike;
-        // @include overlaycenter;
         @include overlay;
       }
       .hike2 {
@@ -238,7 +234,6 @@ body {
         width: 250px;
         height: 200px;
         grid-area: hike2;
-        // @include overlayright;
         @include overlay;
       }
       .hike3 {
@@ -246,7 +241,6 @@ body {
         width: 250px;
         height: 200px;
         grid-area: hike3;
-        // @include overlayleft;
         @include overlay;
       }
     }
@@ -258,17 +252,16 @@ body {
       'slot1 slotS slotS slot2'
       'slot3 slotS slotS slot4';
       padding-left: 0em;
-      // padding-left: 13em;
       padding-right: 0em;
-      // padding-right: 20em;
       padding-top: 2em;
     }
+
+    //other images
     .img1 {
       border: 0px solid black;
       width: 300px;
       height: 200px;
       grid-area: slot1;
-      // @include overlayright;
       @include overlay;
     }
     .img2 {
@@ -276,7 +269,6 @@ body {
       width: 300px;
       height: 200px;
       grid-area: slot2;
-      // @include overlayleft;
       @include overlay;
     }
     .img3 {
@@ -284,7 +276,6 @@ body {
       width: 300px;
       height: 200px;
       grid-area: slot3;
-      // @include overlayleft;
       @include overlay;
     }
     .img4 {
@@ -292,11 +283,10 @@ body {
       width: 300px;
       height: 200px;
       grid-area: slot4;
-      // @include overlayright;
       @include overlay;
     }
 
-
+    //slideshow
     .slideshow {
       border: 0px solid black;
       width: 1000px;
@@ -311,7 +301,6 @@ body {
           width: 1000px;
           height: 200px;
           float: left;
-          // @include overlayleft;
           @include overlay;
           .overlay {
             .text {
